restore txt file of filtered landslides

--- a/data/landslide_catalog/experiments.ipynb
+++ b/data/landslide_catalog/experiments.ipynb
@@ -536,6 +536,8 @@
     "filter()\n",
     "print(len(df))\n",
     "df.reset_index(inplace=True, drop=True)\n",
+    "\n",
+    "# save relevant info\n",
     "df = df[['FID', 'latitude', 'longitude', 'country_na', 'event_date', 'event_time']]\n",
     "df"
    ]
