fix na values in full dataset v1

--- a/data/landslide_catalog/modeling.ipynb
+++ b/data/landslide_catalog/modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\users\\shrey\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3072: DtypeWarning: Columns (6,7) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "c:\\users\\shrey\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3072: DtypeWarning: Columns (12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100,101,102,103,104,105,106,107,108,109,110,111,112,113,114,115,116,117,118,119,120,121,122,123,124,125,126,127,128,129,130,131,132,133,134,135,136,137,138,139,140,141) have mixed types.Specify dtype option on import or set low_memory=False.\n",
       "  interactivity=interactivity, compiler=compiler, result=result)\n"
      ]
     },
@@ -79,7 +79,7 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>9204</td>\n",
-       "      <td>3/3/2016</td>\n",
+       "      <td>3/3/16</td>\n",
        "      <td>13.979100</td>\n",
        "      <td>121.898200</td>\n",
        "      <td>Philippines</td>\n",
@@ -103,7 +103,7 @@
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>12369</td>\n",
-       "      <td>8/15/2015</td>\n",
+       "      <td>8/15/15</td>\n",
        "      <td>20.840400</td>\n",
        "      <td>105.734100</td>\n",
        "      <td>Vietnam</td>\n",
@@ -127,7 +127,7 @@
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>6842</td>\n",
-       "      <td>3/10/2017</td>\n",
+       "      <td>3/10/17</td>\n",
        "      <td>33.370552</td>\n",
        "      <td>75.193916</td>\n",
        "      <td>India</td>\n",
@@ -151,7 +151,7 @@
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>8580</td>\n",
-       "      <td>7/9/2017</td>\n",
+       "      <td>7/9/17</td>\n",
        "      <td>24.827676</td>\n",
        "      <td>93.518250</td>\n",
        "      <td>India</td>\n",
@@ -175,7 +175,7 @@
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>9452</td>\n",
-       "      <td>7/3/2011</td>\n",
+       "      <td>7/3/11</td>\n",
        "      <td>27.316700</td>\n",
        "      <td>86.500000</td>\n",
        "      <td>Nepal</td>\n",
@@ -201,31 +201,31 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0     id       date        lat         lon      country  \\\n",
-       "0           0   9204   3/3/2016  13.979100  121.898200  Philippines   \n",
-       "1           1  12369  8/15/2015  20.840400  105.734100      Vietnam   \n",
-       "2           2   6842  3/10/2017  33.370552   75.193916        India   \n",
-       "3           3   8580   7/9/2017  24.827676   93.518250        India   \n",
-       "4           4   9452   7/3/2011  27.316700   86.500000        Nepal   \n",
+       "   Unnamed: 0     id     date        lat         lon      country  fatalities  \\\n",
+       "0           0   9204   3/3/16  13.979100  121.898200  Philippines           0   \n",
+       "1           1  12369  8/15/15  20.840400  105.734100      Vietnam           0   \n",
+       "2           2   6842  3/10/17  33.370552   75.193916        India           0   \n",
+       "3           3   8580   7/9/17  24.827676   93.518250        India           0   \n",
+       "4           4   9452   7/3/11  27.316700   86.500000        Nepal           0   \n",
        "\n",
-       "  fatalities injuries                type          trigger  ... temp1  air1  \\\n",
-       "0          0        0           landslide         flooding  ...    82  1017   \n",
-       "1          0        0  riverbank_collapse         downpour  ...   110  1006   \n",
-       "2          0        0           landslide             rain  ...    67  1012   \n",
-       "3          0        0           landslide  continuous_rain  ...    87  1005   \n",
-       "4          0        0           landslide  continuous_rain  ...    67  1004   \n",
+       "   injuries                type          trigger  ... temp1  air1 humidity1  \\\n",
+       "0         0           landslide         flooding  ...    82  1017        90   \n",
+       "1         0  riverbank_collapse         downpour  ...   110  1006        91   \n",
+       "2         0           landslide             rain  ...    67  1012        81   \n",
+       "3         0           landslide  continuous_rain  ...    87  1005        99   \n",
+       "4         0           landslide  continuous_rain  ...    67  1004        99   \n",
        "\n",
-       "   humidity1  wind1  precip0  temp0  air0  humidity0  wind0  slope  \n",
-       "0         90     25      0.9     85  1016         87     23     54  \n",
-       "1         91     10      0.0     98  1007         80     12      4  \n",
-       "2         81     19      1.4     66  1012         72     11    115  \n",
-       "3         99      4      6.5     81  1008        100      4    107  \n",
-       "4         99      8      3.5     76  1006         99     11     77  \n",
+       "  wind1 precip0 temp0  air0 humidity0 wind0 slope  \n",
+       "0    25     0.9    85  1016        87    23    54  \n",
+       "1    10     0.0    98  1007        80    12     4  \n",
+       "2    19     1.4    66  1012        72    11   115  \n",
+       "3     4     6.5    81  1008       100     4   107  \n",
+       "4     8     3.5    76  1006        99    11    77  \n",
        "\n",
        "[5 rows x 193 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
