add labels to rows

--- a/data/landslide_catalog/modeling.ipynb
+++ b/data/landslide_catalog/modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -20,14 +20,6 @@
      "output_type": "stream",
      "text": [
       "8953\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\shrey\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3072: DtypeWarning: Columns (12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100,101,102,103,104,105,106,107,108,109,110,111,112,113,114,115,116,117,118,119,120,121,122,123,124,125,126,127,128,129,130,131,132,133,134,135,136,137,138,139,140,141) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n"
      ]
     },
     {
@@ -79,7 +71,7 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>9204</td>\n",
-       "      <td>3/3/16</td>\n",
+       "      <td>3/3/2016</td>\n",
        "      <td>13.979100</td>\n",
        "      <td>121.898200</td>\n",
        "      <td>Philippines</td>\n",
@@ -103,7 +95,7 @@
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>12369</td>\n",
-       "      <td>8/15/15</td>\n",
+       "      <td>8/15/2015</td>\n",
        "      <td>20.840400</td>\n",
        "      <td>105.734100</td>\n",
        "      <td>Vietnam</td>\n",
@@ -127,7 +119,7 @@
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>6842</td>\n",
-       "      <td>3/10/17</td>\n",
+       "      <td>3/10/2017</td>\n",
        "      <td>33.370552</td>\n",
        "      <td>75.193916</td>\n",
        "      <td>India</td>\n",
@@ -151,7 +143,7 @@
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>8580</td>\n",
-       "      <td>7/9/17</td>\n",
+       "      <td>7/9/2017</td>\n",
        "      <td>24.827676</td>\n",
        "      <td>93.518250</td>\n",
        "      <td>India</td>\n",
@@ -175,7 +167,7 @@
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>9452</td>\n",
-       "      <td>7/3/11</td>\n",
+       "      <td>7/3/2011</td>\n",
        "      <td>27.316700</td>\n",
        "      <td>86.500000</td>\n",
        "      <td>Nepal</td>\n",
@@ -201,31 +193,31 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0     id     date        lat         lon      country  fatalities  \\\n",
-       "0           0   9204   3/3/16  13.979100  121.898200  Philippines           0   \n",
-       "1           1  12369  8/15/15  20.840400  105.734100      Vietnam           0   \n",
-       "2           2   6842  3/10/17  33.370552   75.193916        India           0   \n",
-       "3           3   8580   7/9/17  24.827676   93.518250        India           0   \n",
-       "4           4   9452   7/3/11  27.316700   86.500000        Nepal           0   \n",
+       "   Unnamed: 0     id       date        lat         lon      country  \\\n",
+       "0           0   9204   3/3/2016  13.979100  121.898200  Philippines   \n",
+       "1           1  12369  8/15/2015  20.840400  105.734100      Vietnam   \n",
+       "2           2   6842  3/10/2017  33.370552   75.193916        India   \n",
+       "3           3   8580   7/9/2017  24.827676   93.518250        India   \n",
+       "4           4   9452   7/3/2011  27.316700   86.500000        Nepal   \n",
        "\n",
-       "   injuries                type          trigger  ... temp1  air1 humidity1  \\\n",
-       "0         0           landslide         flooding  ...    82  1017        90   \n",
-       "1         0  riverbank_collapse         downpour  ...   110  1006        91   \n",
-       "2         0           landslide             rain  ...    67  1012        81   \n",
-       "3         0           landslide  continuous_rain  ...    87  1005        99   \n",
-       "4         0           landslide  continuous_rain  ...    67  1004        99   \n",
+       "   fatalities  injuries                type          trigger  ... temp1  air1  \\\n",
+       "0           0         0           landslide         flooding  ...    82  1017   \n",
+       "1           0         0  riverbank_collapse         downpour  ...   110  1006   \n",
+       "2           0         0           landslide             rain  ...    67  1012   \n",
+       "3           0         0           landslide  continuous_rain  ...    87  1005   \n",
+       "4           0         0           landslide  continuous_rain  ...    67  1004   \n",
        "\n",
-       "  wind1 precip0 temp0  air0 humidity0 wind0 slope  \n",
-       "0    25     0.9    85  1016        87    23    54  \n",
-       "1    10     0.0    98  1007        80    12     4  \n",
-       "2    19     1.4    66  1012        72    11   115  \n",
-       "3     4     6.5    81  1008       100     4   107  \n",
-       "4     8     3.5    76  1006        99    11    77  \n",
+       "   humidity1  wind1  precip0  temp0  air0  humidity0  wind0  slope  \n",
+       "0         90     25      0.9     85  1016         87     23     54  \n",
+       "1         91     10      0.0     98  1007         80     12      4  \n",
+       "2         81     19      1.4     66  1012         72     11    115  \n",
+       "3         99      4      6.5     81  1008        100      4    107  \n",
+       "4         99      8      3.5     76  1006         99     11     77  \n",
        "\n",
        "[5 rows x 193 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -315,15 +307,15 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>9204</td>\n",
-       "      <td>3/3/16</td>\n",
+       "      <td>3/3/2016</td>\n",
        "      <td>small</td>\n",
        "      <td>0.5</td>\n",
-       "      <td>86</td>\n",
-       "      <td>1017</td>\n",
-       "      <td>84</td>\n",
-       "      <td>27</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>1017.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>27.0</td>\n",
        "      <td>1.4</td>\n",
-       "      <td>86</td>\n",
+       "      <td>86.0</td>\n",
        "      <td>...</td>\n",
        "      <td>82</td>\n",
        "      <td>1017</td>\n",
@@ -339,15 +331,15 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>12369</td>\n",
-       "      <td>8/15/15</td>\n",
+       "      <td>8/15/2015</td>\n",
        "      <td>medium</td>\n",
-       "      <td>0</td>\n",
-       "      <td>102</td>\n",
-       "      <td>1005</td>\n",
-       "      <td>75</td>\n",
-       "      <td>17</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>1005.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>17.0</td>\n",
        "      <td>0.1</td>\n",
-       "      <td>106</td>\n",
+       "      <td>106.0</td>\n",
        "      <td>...</td>\n",
        "      <td>110</td>\n",
        "      <td>1006</td>\n",
@@ -363,15 +355,15 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>6842</td>\n",
-       "      <td>3/10/17</td>\n",
+       "      <td>3/10/2017</td>\n",
        "      <td>unknown</td>\n",
-       "      <td>0</td>\n",
-       "      <td>73</td>\n",
-       "      <td>1020</td>\n",
-       "      <td>42</td>\n",
-       "      <td>6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>1020.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>1.2</td>\n",
-       "      <td>72</td>\n",
+       "      <td>72.0</td>\n",
        "      <td>...</td>\n",
        "      <td>67</td>\n",
        "      <td>1012</td>\n",
@@ -387,15 +379,15 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>8580</td>\n",
-       "      <td>7/9/17</td>\n",
+       "      <td>7/9/2017</td>\n",
        "      <td>medium</td>\n",
        "      <td>2.3</td>\n",
-       "      <td>85</td>\n",
-       "      <td>1006</td>\n",
-       "      <td>100</td>\n",
-       "      <td>8</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>1006.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>8.0</td>\n",
        "      <td>0.9</td>\n",
-       "      <td>90</td>\n",
+       "      <td>90.0</td>\n",
        "      <td>...</td>\n",
        "      <td>87</td>\n",
        "      <td>1005</td>\n",
@@ -411,15 +403,15 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>9452</td>\n",
-       "      <td>7/3/11</td>\n",
+       "      <td>7/3/2011</td>\n",
        "      <td>medium</td>\n",
        "      <td>2.1</td>\n",
-       "      <td>77</td>\n",
-       "      <td>1008</td>\n",
-       "      <td>81</td>\n",
-       "      <td>12</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>1008.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>12.0</td>\n",
        "      <td>2.6</td>\n",
-       "      <td>75</td>\n",
+       "      <td>75.0</td>\n",
        "      <td>...</td>\n",
        "      <td>67</td>\n",
        "      <td>1004</td>\n",
@@ -459,15 +451,15 @@
        "    <tr>\n",
        "      <th>8948</th>\n",
        "      <td>8881</td>\n",
-       "      <td>4/26/11</td>\n",
+       "      <td>4/26/2011</td>\n",
        "      <td>medium</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>...</td>\n",
        "      <td>96</td>\n",
        "      <td>1010</td>\n",
@@ -483,15 +475,15 @@
        "    <tr>\n",
        "      <th>8949</th>\n",
        "      <td>277</td>\n",
-       "      <td>11/27/08</td>\n",
+       "      <td>11/27/2008</td>\n",
        "      <td>medium</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>...</td>\n",
        "      <td>91</td>\n",
        "      <td>1011</td>\n",
@@ -507,15 +499,15 @@
        "    <tr>\n",
        "      <th>8950</th>\n",
        "      <td>2644</td>\n",
-       "      <td>5/7/14</td>\n",
+       "      <td>5/7/2014</td>\n",
        "      <td>small</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>...</td>\n",
        "      <td>61</td>\n",
        "      <td>1017</td>\n",
@@ -531,15 +523,15 @@
        "    <tr>\n",
        "      <th>8951</th>\n",
        "      <td>9211</td>\n",
-       "      <td>10/11/15</td>\n",
+       "      <td>10/11/2015</td>\n",
        "      <td>medium</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>...</td>\n",
        "      <td>97</td>\n",
        "      <td>1010</td>\n",
@@ -555,15 +547,15 @@
        "    <tr>\n",
        "      <th>8952</th>\n",
        "      <td>6574</td>\n",
-       "      <td>12/15/08</td>\n",
+       "      <td>12/15/2008</td>\n",
        "      <td>medium</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>...</td>\n",
        "      <td>98</td>\n",
        "      <td>1010</td>\n",
@@ -582,49 +574,49 @@
        "</div>"
       ],
       "text/plain": [
-       "         id      date severity precip35 temp35 air35 humidity35 wind35  \\\n",
-       "0      9204    3/3/16    small      0.5     86  1017         84     27   \n",
-       "1     12369   8/15/15   medium        0    102  1005         75     17   \n",
-       "2      6842   3/10/17  unknown        0     73  1020         42      6   \n",
-       "3      8580    7/9/17   medium      2.3     85  1006        100      8   \n",
-       "4      9452    7/3/11   medium      2.1     77  1008         81     12   \n",
-       "...     ...       ...      ...      ...    ...   ...        ...    ...   \n",
-       "8948   8881   4/26/11   medium       na     na    na         na     na   \n",
-       "8949    277  11/27/08   medium       na     na    na         na     na   \n",
-       "8950   2644    5/7/14    small       na     na    na         na     na   \n",
-       "8951   9211  10/11/15   medium       na     na    na         na     na   \n",
-       "8952   6574  12/15/08   medium       na     na    na         na     na   \n",
+       "         id        date severity  precip35  temp35   air35  humidity35  \\\n",
+       "0      9204    3/3/2016    small       0.5    86.0  1017.0        84.0   \n",
+       "1     12369   8/15/2015   medium       0.0   102.0  1005.0        75.0   \n",
+       "2      6842   3/10/2017  unknown       0.0    73.0  1020.0        42.0   \n",
+       "3      8580    7/9/2017   medium       2.3    85.0  1006.0       100.0   \n",
+       "4      9452    7/3/2011   medium       2.1    77.0  1008.0        81.0   \n",
+       "...     ...         ...      ...       ...     ...     ...         ...   \n",
+       "8948   8881   4/26/2011   medium       NaN     NaN     NaN         NaN   \n",
+       "8949    277  11/27/2008   medium       NaN     NaN     NaN         NaN   \n",
+       "8950   2644    5/7/2014    small       NaN     NaN     NaN         NaN   \n",
+       "8951   9211  10/11/2015   medium       NaN     NaN     NaN         NaN   \n",
+       "8952   6574  12/15/2008   medium       NaN     NaN     NaN         NaN   \n",
        "\n",
-       "     precip34 temp34  ... temp1  air1 humidity1 wind1 precip0 temp0  air0  \\\n",
-       "0         1.4     86  ...    82  1017        90    25     0.9    85  1016   \n",
-       "1         0.1    106  ...   110  1006        91    10     0.0    98  1007   \n",
-       "2         1.2     72  ...    67  1012        81    19     1.4    66  1012   \n",
-       "3         0.9     90  ...    87  1005        99     4     6.5    81  1008   \n",
-       "4         2.6     75  ...    67  1004        99     8     3.5    76  1006   \n",
-       "...       ...    ...  ...   ...   ...       ...   ...     ...   ...   ...   \n",
-       "8948       na     na  ...    96  1010        99    12     0.2    94  1010   \n",
-       "8949       na     na  ...    91  1011        95    11     2.9    84  1011   \n",
-       "8950       na     na  ...    61  1017        88    17     0.0    66  1019   \n",
-       "8951       na     na  ...    97  1010        93    21     0.0    95  1011   \n",
-       "8952       na     na  ...    98  1010        90    13     0.9    97  1009   \n",
+       "      wind35  precip34  temp34  ...  temp1  air1  humidity1  wind1  precip0  \\\n",
+       "0       27.0       1.4    86.0  ...     82  1017         90     25      0.9   \n",
+       "1       17.0       0.1   106.0  ...    110  1006         91     10      0.0   \n",
+       "2        6.0       1.2    72.0  ...     67  1012         81     19      1.4   \n",
+       "3        8.0       0.9    90.0  ...     87  1005         99      4      6.5   \n",
+       "4       12.0       2.6    75.0  ...     67  1004         99      8      3.5   \n",
+       "...      ...       ...     ...  ...    ...   ...        ...    ...      ...   \n",
+       "8948     NaN       NaN     NaN  ...     96  1010         99     12      0.2   \n",
+       "8949     NaN       NaN     NaN  ...     91  1011         95     11      2.9   \n",
+       "8950     NaN       NaN     NaN  ...     61  1017         88     17      0.0   \n",
+       "8951     NaN       NaN     NaN  ...     97  1010         93     21      0.0   \n",
+       "8952     NaN       NaN     NaN  ...     98  1010         90     13      0.9   \n",
        "\n",
-       "     humidity0 wind0  slope  \n",
-       "0           87    23     54  \n",
-       "1           80    12      4  \n",
-       "2           72    11    115  \n",
-       "3          100     4    107  \n",
-       "4           99    11     77  \n",
-       "...        ...   ...    ...  \n",
-       "8948        99    11     45  \n",
-       "8949        94    13     -1  \n",
-       "8950        73     9     20  \n",
-       "8951        89    19  12954  \n",
-       "8952        91    15     37  \n",
+       "      temp0  air0  humidity0  wind0  slope  \n",
+       "0        85  1016         87     23     54  \n",
+       "1        98  1007         80     12      4  \n",
+       "2        66  1012         72     11    115  \n",
+       "3        81  1008        100      4    107  \n",
+       "4        76  1006         99     11     77  \n",
+       "...     ...   ...        ...    ...    ...  \n",
+       "8948     94  1010         99     11     45  \n",
+       "8949     84  1011         94     13     -1  \n",
+       "8950     66  1019         73      9     20  \n",
+       "8951     95  1011         89     19  12954  \n",
+       "8952     97  1009         91     15     37  \n",
        "\n",
        "[8953 rows x 184 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
