--- a/core/modeling/KNN.ipynb
+++ b/core/modeling/KNN.ipynb
@@ -382,7 +382,7 @@
     "    y = []\n",
     "    idx_to_severity = [\"na\", \"small\", \"medium\", \"large\", \"very_large\"]\n",
     "    for severity in X.severity:\n",
-    "        if binary:\n",
+    "        if not binary:\n",
     "            y.append(idx_to_severity.index(severity))\n",
     "        elif severity == \"na\":\n",
     "            y.append(0)\n",
