--- a/v1/core/modeling/LSTM.ipynb
+++ b/v1/core/modeling/LSTM.ipynb
@@ -24,9 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df = pd.read_csv(\"full_dataset_v1.csv\")\n",
-    "# df = pd.read_csv(\"/Users/ishaanjavali/Documents/Science Fair/2020/Code/API/full_dataset_v1.csv\")\n",
-    "df = pd.read_csv(\"/Users/ishaanjavali/Documents/Science Fair/2020/Code/API/full_dataset_good.csv\")"
+    "df = pd.read_csv(\"dataset_v1.csv\")"
    ]
   },
   {
