ARI: Antecedent Rainfall Index Calculation

--- a/core/features/Antecedent Rainfall Index.ipynb
+++ b/core/features/Antecedent Rainfall Index.ipynb
@@ -421,9 +421,8 @@
     "    for t in range(7):\n",
     "        w_t = pow(t+1,-2) \n",
     "        w += w_t\n",
-    "        num += w_t * int(row['precip'+str(t)])\n",
-    "    ARI.append(round(num/w, 9))\n",
-    "#     break"
+    "        num += w_t * float(row['precip'+str(t)])\n",
+    "    ARI.append(round(num/w, 9))"
    ]
   },
   {
