--- a/v1/core/modeling/LSTM.ipynb
+++ b/v1/core/modeling/LSTM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,16 +20,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3146: DtypeWarning: Columns (2,6,7,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100,101,102,103,104,105,106,107,108,109,110,111,112,113,114,115,116,117,118,119,120,121,122,123,124,125,126,127,128,129,130,131,132,133,134,135,136,137,138,139,140,141) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    }
+   ],
    "source": [
     "df = pd.read_csv(\"dataset_v1.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -136,67 +145,67 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0.1</td>\n",
-       "      <td>20</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>13</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>15</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>14</td>\n",
+       "      <td>32</td>\n",
        "      <td>0.1</td>\n",
-       "      <td>17</td>\n",
+       "      <td>33</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>27</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>23</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>16</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>16</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>17</td>\n",
+       "      <td>3.4</td>\n",
        "      <td>14</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>15</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>13</td>\n",
+       "      <td>9</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>9</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>11</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>10</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>20</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>18</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>18</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>18</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>16</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>19</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>18</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>11</td>\n",
        "      <td>1.2</td>\n",
-       "      <td>15</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>18</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>18</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13</td>\n",
        "      <td>0.2</td>\n",
-       "      <td>17</td>\n",
+       "      <td>27</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>19</td>\n",
+       "      <td>29</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>32</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>32</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -204,21 +213,21 @@
       ],
       "text/plain": [
        "   precip7  wind7  precip6  wind6  precip5  wind5  precip4  wind4  precip3  \\\n",
-       "0      0.1     20      0.3     13      0.0     15      0.4     14      0.1   \n",
-       "1      0.0     16      0.0     16      0.0     14      0.5     15      0.0   \n",
-       "2      0.0     10      0.0      9      0.0     10      0.0     11      0.0   \n",
-       "3      0.0     18      0.0     16      0.0     19      1.0     18      1.2   \n",
-       "4      0.0     18      0.0     18      0.0     13      0.2     17      0.0   \n",
+       "0      0.1     32      0.1     33      0.1     27      0.0     23      0.1   \n",
+       "1      0.9     17      3.4     14      0.0      9      7.5      9      3.1   \n",
+       "2      3.3     20      3.0     18      3.8     20      2.8     18      6.9   \n",
+       "3      0.3      9      0.2     11      1.2      8      0.0      9      0.0   \n",
+       "4      0.2     27      0.0     29      4.5     30      0.1     32      5.7   \n",
        "\n",
        "   wind3  \n",
-       "0     17  \n",
-       "1     13  \n",
-       "2     10  \n",
-       "3     15  \n",
-       "4     19  "
+       "0     31  \n",
+       "1      8  \n",
+       "2     13  \n",
+       "3     14  \n",
+       "4     32  "
       ]
      },
-     "execution_count": 95,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,17 +240,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 6.55374823, -1.20714333,  0.93487281, -0.23135781,  1.65422362,\n",
-       "       -1.17180488,  1.06072668, -1.1515248 ,  0.79474075, -1.16530559])"
+       "array([ 2.73977313,  4.43049107,  0.46606758,  4.50900482,  0.54848729,\n",
+       "        3.45024698,  0.06649168,  2.76014383, -0.14548434,  2.3531288 ])"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -274,14 +283,14 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 6.55374823, -1.20714333],\n",
-       "       [ 0.93487281, -0.23135781],\n",
-       "       [ 1.65422362, -1.17180488],\n",
-       "       [ 1.06072668, -1.1515248 ],\n",
-       "       [ 0.79474075, -1.16530559]])"
+       "array([[ 2.73977313,  4.43049107],\n",
+       "       [ 0.46606758,  4.50900482],\n",
+       "       [ 0.54848729,  3.45024698],\n",
+       "       [ 0.06649168,  2.76014383],\n",
+       "       [-0.14548434,  2.3531288 ]])"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,42 +309,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n",
-      "355/355 - 1s - loss: 0.5082\n",
-      "Epoch 2/10\n",
-      "355/355 - 1s - loss: 0.5082\n",
-      "Epoch 3/10\n",
-      "355/355 - 1s - loss: 0.5082\n",
-      "Epoch 4/10\n",
-      "355/355 - 1s - loss: 0.5082\n",
-      "Epoch 5/10\n",
-      "355/355 - 1s - loss: 0.5082\n",
-      "Epoch 6/10\n",
-      "355/355 - 1s - loss: 0.5082\n",
-      "Epoch 7/10\n",
-      "355/355 - 1s - loss: 0.5082\n",
-      "Epoch 8/10\n",
-      "355/355 - 1s - loss: 0.5082\n",
-      "Epoch 9/10\n",
-      "355/355 - 1s - loss: 0.5082\n",
-      "Epoch 10/10\n",
-      "355/355 - 1s - loss: 0.5082\n"
+      "Epoch 1/20\n",
+      "355/355 - 1s - loss: 1.2429 - accuracy: 0.4615\n",
+      "Epoch 2/20\n",
+      "355/355 - 1s - loss: 0.6914 - accuracy: 0.5390\n",
+      "Epoch 3/20\n",
+      "355/355 - 1s - loss: 0.6837 - accuracy: 0.5631\n",
+      "Epoch 4/20\n",
+      "355/355 - 1s - loss: 0.6800 - accuracy: 0.5695\n",
+      "Epoch 5/20\n",
+      "355/355 - 1s - loss: 0.6777 - accuracy: 0.5757\n",
+      "Epoch 6/20\n",
+      "355/355 - 1s - loss: 0.6769 - accuracy: 0.5757\n",
+      "Epoch 7/20\n",
+      "355/355 - 1s - loss: 0.6760 - accuracy: 0.5812\n",
+      "Epoch 8/20\n",
+      "355/355 - 1s - loss: 0.6758 - accuracy: 0.5853\n",
+      "Epoch 9/20\n",
+      "355/355 - 1s - loss: 0.6756 - accuracy: 0.5795\n",
+      "Epoch 10/20\n",
+      "355/355 - 1s - loss: 0.6748 - accuracy: 0.5815\n",
+      "Epoch 11/20\n",
+      "355/355 - 1s - loss: 0.6752 - accuracy: 0.5831\n",
+      "Epoch 12/20\n",
+      "355/355 - 1s - loss: 0.6735 - accuracy: 0.5837\n",
+      "Epoch 13/20\n",
+      "355/355 - 1s - loss: 0.6740 - accuracy: 0.5855\n",
+      "Epoch 14/20\n",
+      "355/355 - 1s - loss: 0.6743 - accuracy: 0.5800\n",
+      "Epoch 15/20\n",
+      "355/355 - 1s - loss: 0.6743 - accuracy: 0.5836\n",
+      "Epoch 16/20\n",
+      "355/355 - 1s - loss: 0.6739 - accuracy: 0.5854\n",
+      "Epoch 17/20\n",
+      "355/355 - 1s - loss: 0.6729 - accuracy: 0.5848\n",
+      "Epoch 18/20\n",
+      "355/355 - 1s - loss: 0.6724 - accuracy: 0.5833\n",
+      "Epoch 19/20\n",
+      "355/355 - 1s - loss: 0.6730 - accuracy: 0.5839\n",
+      "Epoch 20/20\n",
+      "355/355 - 1s - loss: 0.6729 - accuracy: 0.5799\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7fba08ab4150>"
+       "<tensorflow.python.keras.callbacks.History at 0x7feb144bb050>"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,51 +372,37 @@
    "source": [
     "model = Sequential()\n",
     "model.add(Bidirectional(LSTM(11)))\n",
-    "model.add(Dense(1,activation='softmax'))\n",
-    "model.compile(loss='mean_squared_error', optimizer='adam')\n",
-    "model.fit(X_train, y_train, epochs = 10, batch_size = 20, verbose = 2)\n",
-    "# res = LSTM(11)\n",
-    "# out = res(X_train)\n",
-    "# print(out.shape)"
+    "model.add(Dense(1))\n",
+    "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=[\"accuracy\"])\n",
+    "model.fit(X_train, y_train, epochs = 20, batch_size = 20, verbose = 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 819us/step - loss: 0.0000e+00\n"
+      "56/56 [==============================] - 0s 1ms/step - loss: 0.6819 - accuracy: 0.5722\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "[0.6818662285804749, 0.5721533298492432]"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# tx = X_test[0]\n",
-    "# ty = np.array([y_test[0]])\n",
-    "# tx = tx.reshape((1, 5, 2))\n",
-    "# model.evaluate(tx,ty)\n",
     "model.evaluate(X_test, y_test)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
